[tool.poetry]
name = "learn-python"
version = "0.1.0"
description = ""
authors = ["lizilong1993 <lizilong_whu@qq.com>"]
readme = "README.md"
packages = [{include = "learn_python"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
